fix photos spacing

--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -13,7 +13,7 @@
   margin-top: 6%;
 	float: left;
 	margin-left: 13%;
-	width: 600px;
+	width: 630px;
   height: 800px;
 }
 
@@ -130,14 +130,100 @@
 .page .project {
   margin-left:4%;
   margin-top: 2%;
-  height: 100%;
-}
-
-.page .project .desc{
-  margin-top: 2%;
+  height: 80%;
   font-size: 18px;
 }
 
+.page .project .grid .thumb-header {
+  margin: 3% 0 0 0;
+  width: 98%;
+  font-size: 28px;
+  border-bottom: 1px solid #000000;
+}
+
+.page .project .grid .thumbs-list {
+  margin: 2% 0 1% 0;
+  width: 100%;
+  font-size: 18px;
+  overflow: auto;
+}
+
+.page .project .grid .thumbs-list .thumb {
+  margin-bottom: 2%;
+  margin-right: 5%;
+  width: 29%;
+  height: 5%;
+  float: left;
+  text-align: center;
+}
+
+.page .project .grid .thumbs-list .thumb img {
+  border: 5px solid;
+  border-color: #EEE;
+  width: 100%;
+  height: 18%;
+}
+
+.page .project .grid .thumbs-list .thumb .desc {
+  font-size: 14px;
+  margin-top: 5%;
+  font-weight: bold;
+  color: #ae2900;
+}
+
+.page .project .grid .thumbs-list .thumb .tags {
+  margin-top: 1%;
+  color: #AAA;
+  font-size: 12px;
+}
+
+
+.page .project .grid .thumbs-list .thumb .desc li {
+  font-size: 12px
+}
+
+.page .project .grid .thumbs-list .thumb .desc li {
+  list-style: none inside;
+  padding: 5px 5px 5px 5px;
+  margin: 10px 10px 0px 0px;
+  width: 60px;
+  background-color: #f9f9f9;
+  color: #888;
+  text-decoration: none !important;
+  border: solid 1px #eee;
+  border-radius: 4px;
+  float: left;
+  text-align: center;
+}
+
+.page .project .grid .thumbs-list .thumb .desc li:hover {
+  background-color: #ddd;
+  color: #555 !important;
+  border: solid 1px #aaa;
+}
+
+.page .project .grid .thumbs-list .thumb .desc a.extra {
+  color: #ae2900;
+  font-size: 18px;
+  margin: 10px 0px 30px 0px;
+}
+
+.page .project .grid .thumbs-list .thumb .desc a:hover {
+  color: #888;
+}
+
+.page .project .grid .thumbs-list .footer a {
+  margin-left: 190px;
+  color: #ae2900;
+}
+
+.page .project .headline a.extra{
+  color: #ae2900;
+}
+
+.page .project .headline a:hover {
+  color: #888;
+}
 /* Images */
 
 .images{
